--- a/Gallery.html
+++ b/Gallery.html
@@ -23,7 +23,7 @@
             <a class="decorate" href="images/pic12.jpg"><div class="block"><img src="images/pic12.jpg" /><div class="flex"><img class="vector" src="images/location.png" /><p>Rani Mahal</p></div></div></a>
         </div>
         <nav>
-            <span><a href="MyProfile.html">Home</a></span><br/><br/>
+            <span><a href="index.html">Home</a></span><br/><br/>
             <span><a href="mailto:crestniraj@gmail.com" target="_blank">Contact</a></span><br/><br/>
             <span><a href="#">Gallery</a></span><br/><br/>
         </nav>
