--- a/Gallery.html
+++ b/Gallery.html
@@ -11,11 +11,11 @@
         <div class="gallery">
             <a class="decorate" href="images/pic1.jpg"><div class="block"><img src="images/pic1.jpg" /><div class="flex"><img class="vector" src="images/location.png" /><p>Kalinchowk</p></div></div></a>
             <a class="decorate" href="images/pic2.jpg"><div class="block"><img src="images/pic2.jpg" /><div class="flex"><img class="vector" src="images/location.png" /><p>Basantapur</p></div></div></a>
-            <a class="decorate" href="images/pic3.JPG"><div class="block"><img src="images/pic3.jpg" /><div class="flex"><img class="vector" src="images/location.png" /><p>Maitighar</p></div></div></a>
+            <a class="decorate" href="images/pic3.JPG"><div class="block"><img src="images/pic3.JPG" /><div class="flex"><img class="vector" src="images/location.png" /><p>Maitighar</p></div></div></a>
             <a class="decorate" href="images/pic4.jpg"><div class="block"><img src="images/pic4.jpg" /><div class="flex"><img class="vector" src="images/location.png" /><p>Hyatt Regency</p></div></div></a>
             <a class="decorate" href="images/pic5.jpg"><div class="block"><img src="images/pic5.jpg" /><div class="flex"><img class="vector" src="images/location.png" /><p>Orientation</p></div></div></a>
             <a class="decorate" href="images/pic6.jpg"><div class="block"><img src="images/pic6.jpg" /><div class="flex"><img class="vector" src="images/location.png" /><p>Thapathali</p></div></div></a>
-            <a class="decorate" href="images/pic7.JPG"><div class="block"><img src="images/pic7.jpg" /><div class="flex"><img class="vector" src="images/location.png" /><p>TBC</p></div></div></a>
+            <a class="decorate" href="images/pic7.JPG"><div class="block"><img src="images/pic7.JPG" /><div class="flex"><img class="vector" src="images/location.png" /><p>TBC</p></div></div></a>
             <a class="decorate" href="images/pic8.jpg"><div class="block"><img src="images/pic8.jpg" /><div class="flex"><img class="vector" src="images/location.png" /><p>Tansen, Palpa</p></div></div></a>
             <a class="decorate" href="images/pic9.jpg"><div class="block"><img src="images/pic9.jpg" /><div class="flex"><img class="vector" src="images/location.png" /><p>Bhairahawa</p></div></div></a>
             <a class="decorate" href="images/pic10.jpg"><div class="block"><img src="images/pic10.jpg" /><div class="flex"><img class="vector" src="images/location.png" /><p>Sisneri</p></div></div></a>
