--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                                 <img class="vector2" src="images/instagram.png" />
                             </a>
                             <a class="decorate" href="https://www.twitter.com/crestniraj" target="_blank">
-                                <img class="vector2" style="width:35px;height:35px" src="images/twitter.png" />
+                                <img class="vector2" style="transform:scale(1.2)" src="images/twitter.png" />
                             </a>
                             <img src="images/pikachu.gif" class="animate" />
                         </div>
